// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs.svelte > should add a new tab 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="2"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Gamma
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
       
      <icon
        aria-label="Add Tab"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="add"
        />
      </icon>
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should emit the add event 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="2"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Gamma
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
       
      <icon
        aria-label="Add Tab"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="add"
        />
      </icon>
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should handle item value changes 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="true"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="2"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Gamma
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
       
      <icon
        aria-label="Add Tab"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="add"
        />
      </icon>
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should handle item value changes 2`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="true"
        class="flex flex-row items-center tab"
        data-path="2"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Gamma
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
       
      <icon
        aria-label="Add Tab"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="add"
        />
      </icon>
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should remove tabs when remove icon is clicked 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="true"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Gamma
          </p>
          
        </item>
         
        <icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </icon>
      </wrap-item>
       
      <icon
        aria-label="Add Tab"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="add"
        />
      </icon>
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should render items using custom component 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <span>
            undefined
          </span>
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <span>
            undefined
          </span>
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should render text array 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should render using default field mapping 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should render using field mappings 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should support custom icons 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should support custom icons 2`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should support editable attribute 1`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;

exports[`Tabs.svelte > should support editable attribute 2`] = `
<body>
  <div>
    <tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="0"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Alpha
          </p>
          
        </item>
         
      </wrap-item>
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center tab"
        data-path="1"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
           
          <p>
            Beta
          </p>
          
        </item>
         
      </wrap-item>
       
    </tabs>
  </div>
</body>
`;
